--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -183,6 +183,42 @@
     color: #999;
   }
   
+
+
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: relative;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  overflow-y: scroll;
+}
+
+/* Links inside the dropdown */
+.dropdown-content * {
+  color: black;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  text-decoration: none;
+  display: inline-block;
+  transition: all 0.5s ease;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content li:hover {background-color: #aed1ee}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:flex;}
+
   @media (max-width: 600px) {
     * {
       font-size: 1rem;
