--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -201,6 +201,7 @@
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   overflow-y: scroll;
+  justify-content: center;
 }
 
 /* Links inside the dropdown */
@@ -210,6 +211,7 @@
   padding-bottom: 3px;
   text-decoration: none;
   display: inline-block;
+  width: 100%;
   transition: all 0.5s ease;
 }
 
